新增FFmpeg工具、JWToken引入